[VARKA] Compact with compress(mask), and skip it where nothing needs copying
The columnar filter's compaction was one Arrow call per selected row, so its
cost grew with selectivity: 5.4 ns/row at 15% selected, 8.6 at 100%. It is now
one lane group at a time - IntVector.compress moves the selected lanes to the
low end, Long.compress does the same for the validity bits - and flat at
3.8-4.2 ns/row whatever the group holds. Isolated by an in-session A/B, that is
worth +32% at 15% selected, +80% at 50%, +110% at 85% and +126% at 100%, taking
the committed ladder from 2.4-2.5x to 3.4-5.5x. Compaction has stopped being a
function of selectivity.

Two decisions carry it. Every data store is unmasked - a masked store costs
2.3x-2.9x and this would pay one per lane group - which works because the
destination is allocated with a whole lane group of slack past the selected
count and setValueCount makes the slack invisible. And a group that selects
nothing costs one bitmap read and a branch, which is what keeps low selectivity
cheap. Applied at getTypeWidth() == 4: a width check, not a type check, so a
future Arrow type of the right width is served by a bit-for-bit lane move.
Width 8 waits for task 29.

Where the kernel lives took a decision. varka-engine is a *test*-scope
dependency of catalyst and sql/core - production code never links it, and only
emitted bytecode reaches it by name - but a kernel the batch path calls from
Scala has to be on the compile classpath. The owner's call: enable the
incubating Vector API on catalyst's own main compile path and put
SelectionVectorOps beside VarkaSelectionBitmap. Catalyst's Java is compiled by
scala-maven-plugin, not maven-compiler-plugin, so the flag appends to that
plugin's javacArgs, and SparkBuild repeats it as VarkaEngine already does.

Two batch-level fast paths ride along. count == 0 skips the per-row scans, which
were O(len) whatever they found. count == len forwards the child's columns
instead of copying them - the rule that